--- a/templates/JiraDataCenterClone.template.yaml
+++ b/templates/JiraDataCenterClone.template.yaml
@@ -1,10 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: Atlassian JIRA Data Center STAGING or DR stack
+Description: Atlassian Jira Data Center STAGING or DR stack
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: JIRA setup
+          default: Jira setup
         Parameters:
           - JiraProduct
           - JiraVersion
@@ -18,7 +18,7 @@ Metadata:
           - ClusterNodeInstanceType
           - ClusterNodeMax
           - ClusterNodeMin
-          - ClusterNodeSize
+          - ClusterNodeVolumeSize
       - Label:
           default: Database
         Parameters:
@@ -37,10 +37,10 @@ Metadata:
           - ExternalSubnets
           - InternalSubnets
           - KeyName
-          - SSLCertificateName
+          - SSLCertificateARN
           - VPC
       - Label:
-          default: Disaster Recovery Snapshot ID's
+          default: Disaster Recovery Snapshot IDs
         Parameters:
           - DBSnapshotName
           - EBSSnapshotId
@@ -95,7 +95,7 @@ Metadata:
         default: Minimum number of cluster nodes
       ClusterNodeInstanceType:
         default: Cluster node instance type
-      ClusterNodeSize:
+      ClusterNodeVolumeSize:
         default: Cluster node instance volume size
       CustomDnsName:
         default: Existing DNS name (optional)
@@ -148,7 +148,7 @@ Metadata:
       InternalSubnets:
         default: Internal subnets *
       JiraProduct:
-        default: JIRA Product *
+        default: Jira Product *
       JiraVersion:
         default: Version *
       JiraDownloadUrl:
@@ -157,8 +157,8 @@ Metadata:
         default: JVM Heap Size Override
       KeyName:
         default: Key Name *
-      SSLCertificateName:
-        default: SSL Certificate Name
+      SSLCertificateARN:
+        default: SSL Certificate ARN
       TomcatAcceptCount:
         default: Tomcat Accept Count
       TomcatConnectionTimeout:
@@ -264,8 +264,8 @@ Parameters:
   ClusterNodeMin:
     Default: 1
     Type: Number
-  ClusterNodeSize:
-    Default: 50
+  ClusterNodeVolumeSize:
+    Default: 200
     Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
     Type: Number
   CustomDnsName:
@@ -314,7 +314,7 @@ Parameters:
     Type: String
   DBMaxWaitMillis:
     Default: 10000
-    Description: The length of time (in milliseconds) that JIRA is allowed to wait for a database connection to become available (while there are no free ones available in the pool), before returning an error
+    Description: The length of time (in milliseconds) that Jira is allowed to wait for a database connection to become available (while there are no free ones available in the pool), before returning an error
     Type: String
   DBMinEvictableIdleTimeMillis:
     Default: 180000
@@ -325,7 +325,7 @@ Parameters:
     Description: The minimum number of idle database connections that are kept open at any time
     Type: String
   DBMultiAZ:
-    Default: true
+    Default: false
     AllowedValues:
       - true
       - false
@@ -374,7 +374,7 @@ Parameters:
     Type: String
   DBTestOnBorrow:
     Default: false
-    Description: Tests if the database connection is valid when it is borrowed from the database connection pool by JIRA
+    Description: Tests if the database connection is valid when it is borrowed from the database connection pool by Jira
     Type: String
   DBTestWhileIdle:
     Default: true
@@ -420,7 +420,7 @@ Parameters:
     ConstraintDescription: Must be a valid Jira download url from version 7 or higher
   JiraProduct:
     Default: All
-    Description: The JIRA Product to install. Installs latest available version of the selected product
+    Description: The Jira Product to install. Installs latest available version of the selected product
     Type: String
     ConstraintDescription: 'Must be "Core", "Software", "ServiceDesk", or "All"'
     AllowedValues:
@@ -443,11 +443,11 @@ Parameters:
     ConstraintDescription: Must be the name of an existing EC2 Key Pair.
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
-  SSLCertificateName:
+  SSLCertificateARN:
     Default: ''
-    Description: The name of your Server Certificate to use for HTTPS.  Leave blank if you don't want to set up HTTPS at this time
+    Description: Amazon Resource Name (ARN) of your SSL certificate. If you want to use your own certificate that you generated outside of Amazon, you need to first import it to AWS Certificate Manager. After a successful import, you'll receive the ARN. If you want to create a certificate with AWS Certificate Manager (ACM certificate), you will receive the ARN after it's successfully created.
     MinLength: 0
-    MaxLength: 32
+    MaxLength: 90
     Type: String
   StartCollectd:
     Default: true
@@ -496,7 +496,7 @@ Parameters:
     Type: String
   TomcatRedirectPort:
     Default: 8443
-    Description: For a non-ssl conenctor actioning a redirect to ssl URI, Catalina will automatically redirect the request to the port number specified here
+    Description: The port number for Catalina to use when automatically redirecting a non-SSL connector actioning a redirect to a SSL URI
     Type: String
   TomcatScheme:
     Default: http
@@ -520,7 +520,7 @@ Conditions:
   DoSetDBMasterUserPassword:
     !Not [!Equals [!Ref DBMasterUserPassword, '']]
   DoSSL:
-    !Not [!Equals [!Ref SSLCertificateName, '']]
+    !Not [!Equals [!Ref SSLCertificateARN, '']]
   SSLScheme:
     !Equals [!Ref TomcatScheme, 'https']
   OverrideHeap:
@@ -731,20 +731,20 @@ Mappings:
   JIRAProduct2NameAndVersion:
     All:
       name: jira-all
-      shortdisplayname: '"JIRA All"'
-      fulldisplayname: '"Atlassian JIRA All"'
+      shortdisplayname: '"Jira All"'
+      fulldisplayname: '"Atlassian Jira All"'
     Core:
       name: jira-core
-      shortdisplayname: '"JIRA Core"'
-      fulldisplayname: '"Atlassian JIRA Core"'
+      shortdisplayname: '"Jira Core"'
+      fulldisplayname: '"Atlassian Jira Core"'
     ServiceDesk:
       name: servicedesk
-      shortdisplayname: '"JIRA SD"'
-      fulldisplayname: '"Atlassian JIRA Service Desk"'
+      shortdisplayname: '"Jira SD"'
+      fulldisplayname: '"Atlassian Jira Service Desk"'
     Software:
       name: jira-software
-      shortdisplayname: '"JIRA SW"'
-      fulldisplayname: '"Atlassian JIRA Software"'
+      shortdisplayname: '"Jira SW"'
+      fulldisplayname: '"Atlassian Jira Software"'
 Resources:
   JiraClusterNodeRole:
     Type: AWS::IAM::Role
@@ -783,7 +783,7 @@ Resources:
       VPCZoneIdentifier: !Ref InternalSubnets
       Tags:
         - Key: Name
-          Value: !Sub ["${StackName} JIRA Node", StackName: !Ref 'AWS::StackName']
+          Value: !Sub ["${StackName} Jira Node", StackName: !Ref 'AWS::StackName']
           PropagateAtLaunch: true
         - Key: Cluster
           Value: !Ref AWS::StackName
@@ -920,7 +920,7 @@ Resources:
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
-            VolumeSize: !Ref ClusterNodeSize
+            VolumeSize: !Ref ClusterNodeVolumeSize
         - DeviceName: /dev/xvdf
           Ebs: {}
           NoDevice: true
@@ -954,7 +954,7 @@ Resources:
       SnapshotId: !Ref EBSSnapshotId
       Tags:
         - Key: Name
-          Value: !Sub ["${StackName} JIRA DR volume", StackName: !Ref 'AWS::StackName']
+          Value: !Sub ["${StackName} Jira DR volume", StackName: !Ref 'AWS::StackName']
         - Key: Cluster
           Value: !Ref AWS::StackName
         - Key: Application
@@ -1083,7 +1083,7 @@ Resources:
       StorageType: !If [DBProvisionedIops, io1, gp2]
       Tags:
         - Key: Name
-          Value: !Sub ["${StackName} JIRA PostgreSQL Database", StackName: !Ref 'AWS::StackName']
+          Value: !Sub ["${StackName} Jira PostgreSQL Database", StackName: !Ref 'AWS::StackName']
       VPCSecurityGroups: [!Ref SecurityGroup]
   DBSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
@@ -1129,11 +1129,7 @@ Resources:
             InstanceProtocol: HTTP
             PolicyNames:
               - JSessionIdStickiness
-            SSLCertificateId:
-              - !Sub
-                - "arn:aws:iam::${AccountId}:server-certificate/${SSLCertificateName}"
-                - AccountId: !Ref AWS::AccountId
-                  SSLCertificateName: !Ref SSLCertificateName
+            SSLCertificateId: !Ref SSLCertificateARN
           - !Ref AWS::NoValue
       HealthCheck:
         Target: !If [UseContextPath, !Join ['', ['HTTP:', !Ref TomcatDefaultConnectorPort, !Ref TomcatContextPath, '/status']], !Join ['', ['HTTP:', !Ref TomcatDefaultConnectorPort, '/status']]]
